<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/cancel_btn"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/benefits_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="sans-serif"
            android:text="@string/benefits_btn"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/signup_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="100dp"
            android:fontFamily="sans-serif"
            android:text="@string/signup_text"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/signup_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/signup_info"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="@+id/signup_text"
            app:layout_constraintStart_toStartOf="@+id/signup_text"
            app:layout_constraintTop_toBottomOf="@+id/signup_text" />

        <LinearLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_info">

            <EditText
                android:id="@+id/fname_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/custom_edittext_line"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="20dp"
                android:hint="@string/first_name"
                android:inputType="text"
                android:paddingStart="5dp"
                android:paddingTop="20dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/lname_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/custom_edittext_line"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="20dp"
                android:hint="@string/last_name"
                android:inputType="text"
                android:paddingStart="5dp"
                android:paddingTop="20dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:textColor="@color/black"
                android:textSize="13sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/email_address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/custom_edittext_line"
            android:drawableStart="@drawable/conversation"
            android:drawablePadding="20dp"
            android:hint="@string/email"
            android:paddingStart="5dp"
            android:paddingTop="20dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@+id/name_layout"
            app:layout_constraintStart_toStartOf="@+id/name_layout"
            app:layout_constraintTop_toBottomOf="@+id/name_layout" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/custom_edittext_line"
            android:drawableStart="@drawable/phone_call"
            android:drawablePadding="18dp"
            android:hint="@string/phone"
            android:inputType="phone"
            android:paddingStart="5dp"
            android:paddingTop="20dp"
            android:paddingEnd="8dp"
            android:paddingBottom="9dp"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@+id/email_address"
            app:layout_constraintStart_toStartOf="@+id/email_address"
            app:layout_constraintTop_toBottomOf="@+id/email_address" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/custom_edittext_line"
            android:drawableStart="@drawable/key"
            android:drawableEnd="@drawable/password_visibility"
            android:drawablePadding="18dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="5dp"
            android:paddingTop="20dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@+id/phone_number"
            app:layout_constraintStart_toStartOf="@+id/phone_number"
            app:layout_constraintTop_toBottomOf="@+id/phone_number"
            app:passwordToggleDrawable="@drawable/password_visibility"
            app:passwordToggleEnabled="true" />

        <TextView
            android:id="@+id/signup_invite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="18dp"
            android:fontFamily="sans-serif"
            android:text="@string/invite"
            android:textColor="#4CE895"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80sp"
            android:layout_marginTop="25dp"
            android:background="@drawable/item_background"
            android:text="@string/signup_btn_text"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:backgroundTint="#4CE895"
            app:cornerRadius="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_invite" />

        <TextView
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="150dp"
            android:fontFamily="sans-serif"
            android:text="@string/login_btn"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="@id/signupButton"
            app:layout_constraintBottom_toTopOf="@id/footer"
            app:layout_constraintStart_toStartOf="@id/signupButton"
            app:layout_constraintTop_toBottomOf="@+id/signupButton" />

        <TextView
            android:id="@+id/footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="sans-serif"
            android:text="@string/footer_text"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>